creusot/tests/should_fail/bad_borrow.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
 --> bad_borrow.rs:6:13
  |
5 |     let a = &mut x;
  |             ------ first mutable borrow occurs here
6 |     let b = &mut x;
  |             ^^^^^^ second mutable borrow occurs here
7 |
8 |     *a += *b;
  |     -------- first borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
